Increment step count to include ringbuilder
This patch wires in ringbuilder.pp so that it is always
asserted like the other manifests and it fixes the misaligned
step sequencing in calling our overcloud controller manifests.

Previously it was called as a separate software deployment outside of
the hiera step sequence. This made things confusing in
controller-post.yaml since the deployment names didn't align
with the step hiera variables after step 3. Now that we call it
just like the other modules it should make gradually moving this
code to puppet-tripleo more straightforward as well.

Change-Id: Ibd4f51f65da475bb20a6b08d7bda673f330a5464

--- a/puppet/controller-config-pacemaker.yaml
+++ b/puppet/controller-config-pacemaker.yaml
@@ -22,7 +22,10 @@ resources:
       outputs:
       - name: result
       config:
-        get_file: manifests/overcloud_controller_pacemaker.pp
+        list_join:
+        - ''
+        - - get_file: manifests/overcloud_controller_pacemaker.pp
+          - get_file: manifests/ringbuilder.pp
 
 outputs:
   OS::stack_id:
