configure horizon with memcached ipv6 when needed
* Add MemcachedIPv6 parameter
* If MemcachedIPv6 is set at True, configure Horizon with Memcached IPv6
  addresses.

This patch is required to make Horizon working when running IPv6
networks.

Change-Id: I752e727bfb9040b29f5d755f565fa6b54b9511c8
(cherry picked from commit aadb34dc02ada859cc96a46dc2525d1d0e7b8934)

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -324,6 +324,10 @@ parameters:
     default: false
     description: Whether to manage IPtables rules.
     type: boolean
+  MemcachedIPv6:
+    default: false
+    description: Enable IPv6 features in Memcached.
+    type: boolean
   PurgeFirewallRules:
     default: false
     description: Whether IPtables rules should be purged before setting up the new ones.
@@ -1166,6 +1170,7 @@ resources:
         nova_enable_db_purge: {get_param: NovaEnableDBPurge}
         nova_ipv6: {get_param: NovaIPv6}
         corosync_ipv6: {get_param: CorosyncIPv6}
+        memcached_ipv6: {get_param: MemcachedIPv6}
         nova_password: {get_param: NovaPassword}
         nova_dsn:
           list_join:
@@ -1570,6 +1575,7 @@ resources:
                 tripleo::firewall::manage_firewall: {get_input: manage_firewall}
                 tripleo::firewall::purge_firewall_rules: {get_input: purge_firewall_rules}
                 # Misc
+                memcached_ipv6: {get_input: memcached_ipv6}
                 memcached::listen_ip: {get_input: memcached_network}
                 neutron_public_interface_ip: {get_input: neutron_public_interface_ip}
                 ntp::servers: {get_input: ntp_servers}
