--- a/environments/network-isolation-v6.yaml
+++ b/environments/network-isolation-v6.yaml
@@ -53,3 +53,5 @@ parameter_defaults:
   NovaIPv6: True
   # Enable IPv6 environment for RabbitMQ.
   RabbitIPv6: true
+  # Enable IPv6 environment for Memcached.
+  MemcachedIPv6: true
