configure horizon with memcached ipv6 when needed
* Add MemcachedIPv6 parameter
* If MemcachedIPv6 is set at True, configure Horizon with Memcached IPv6
  addresses.

This patch is required to make Horizon working when running IPv6
networks.

Change-Id: I752e727bfb9040b29f5d755f565fa6b54b9511c8

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -104,6 +104,10 @@ parameters:
     type: string
     constraints:
       - custom_constraint: nova.keypair
+  MemcachedIPv6:
+    default: false
+    description: Enable IPv6 features in Memcached.
+    type: boolean
   NeutronExternalNetworkBridge:
     description: Name of bridge used for external network traffic.
     type: string
@@ -939,6 +943,7 @@ resources:
           KeystoneSSLCertificateKey: {get_param: KeystoneSSLCertificateKey}
           KeystoneNotificationDriver: {get_param: KeystoneNotificationDriver}
           KeystoneNotificationFormat: {get_param: KeystoneNotificationFormat}
+          MemcachedIPv6: {get_param: MemcachedIPv6}
           MysqlClusterUniquePart: {get_attr: [MysqlClusterUniquePart, value]}
           MysqlInnodbBufferPoolSize: {get_param: MysqlInnodbBufferPoolSize}
           MysqlMaxConnections: {get_param: MysqlMaxConnections}
