--- a/environments/puppet-pacemaker.yaml
+++ b/environments/puppet-pacemaker.yaml
@@ -10,3 +10,5 @@ resource_registry:
   # which use pacemaker. In the future (with upcoming HA light work) this
   # list will hopefully be much smaller however.
   OS::TripleO::Services::Keystone: ../puppet/services/pacemaker/keystone.yaml
+  OS::TripleO::Services::GlanceApi: ../puppet/services/pacemaker/glance-api.yaml
+  OS::TripleO::Services::GlanceRegistry: ../puppet/services/pacemaker/glance-registry.yaml
