Add EndpointMap as output
The endpoint map contains, not only the hosts and protocols that
the resulting services will use, but also the ports. This
information is useful, and the aim of this patch is to make it
available for the tripleoclient to use it.

Change-Id: I4cc5bbf2e7200f78cd90b93659c326a9200278d7
Bug: #1569851
(cherry picked from commit 321cee7616186e83e9a5eff9e9a9abe9b9f82fab)

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -1670,3 +1670,9 @@ outputs:
   SwiftInternalVip:
     description: VIP for Swift Proxy internal endpoint
     value: {get_attr: [VipMap, net_ip_map, {get_param: [ServiceNetMap, SwiftProxyNetwork]}]}
+  EndpointMap:
+    description: |
+      Mapping of the resources with the needed info for their endpoints.
+      This includes the protocol used, the IP, port and also a full
+      representation of the URI.
+    value: {get_attr: [EndpointMap, endpoint_map]}
