--- a/puppet/ceph-cluster-config.yaml
+++ b/puppet/ceph-cluster-config.yaml
@@ -91,7 +91,7 @@ resources:
                         cap_mon: 'allow profile bootstrap-osd'
                       },
                       client.CLIENT_USER: {
-                        secret: 'ADMIN_KEY',
+                        secret: 'CLIENT_KEY',
                         mode: '0644',
                         cap_mon: 'allow r',
                         cap_osd: 'allow class-read object_prefix rbd_children, allow rwx pool=CINDER_POOL, allow rwx pool=NOVA_POOL, allow rwx pool=GLANCE_POOL'
@@ -99,6 +99,7 @@ resources:
                     }"
                     params:
                       CLIENT_USER: {get_param: CephClientUserName}
+                      CLIENT_KEY: {get_param: ceph_client_key}
                       ADMIN_KEY: {get_param: ceph_admin_key}
                       NOVA_POOL: {get_param: NovaRbdPoolName}
                       CINDER_POOL: {get_param: CinderRbdPoolName}
