Remove network/noop.yaml, use OS::Heat::None
Removes the old noop nested stack template for networks and
instead uses OS::Heat::None instead. This should avoid a few
extra resource checks on create and update.

Change-Id: Ia3d7f62dbda2705ffc3d9edcddebcd3ece3cc9d2

--- a/environments/network-isolation.yaml
+++ b/environments/network-isolation.yaml
@@ -10,7 +10,7 @@ resource_registry:
   OS::TripleO::Network::Storage: ../network/storage.yaml
   OS::TripleO::Network::Tenant: ../network/tenant.yaml
   # Management network is optional and disabled by default
-  OS::TripleO::Network::Management: ../network/noop.yaml
+  OS::TripleO::Network::Management: OS::Heat::None
 
   # Port assignments for the VIPs
   OS::TripleO::Network::Ports::ExternalVipPort: ../network/ports/external.yaml
