--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -56,13 +56,12 @@ resource_registry:
   OS::TripleO::Network: network/networks.yaml
   OS::TripleO::VipConfig: puppet/vip-config.yaml
 
-
-  OS::TripleO::Network::External: network/noop.yaml
-  OS::TripleO::Network::InternalApi: network/noop.yaml
-  OS::TripleO::Network::StorageMgmt: network/noop.yaml
-  OS::TripleO::Network::Storage: network/noop.yaml
-  OS::TripleO::Network::Tenant: network/noop.yaml
-  OS::TripleO::Network::Management: network/noop.yaml
+  OS::TripleO::Network::External: OS::Heat::None
+  OS::TripleO::Network::InternalApi: OS::Heat::None
+  OS::TripleO::Network::StorageMgmt: OS::Heat::None
+  OS::TripleO::Network::Storage: OS::Heat::None
+  OS::TripleO::Network::Tenant: OS::Heat::None
+  OS::TripleO::Network::Management: OS::Heat::None
 
   OS::TripleO::Network::Ports::NetVipMap: network/ports/net_ip_map.yaml
   OS::TripleO::Network::Ports::NetIpMap: network/ports/net_ip_map.yaml
