Always use parameter_defaults in environment files
In the environments/ subdirectory of tripleo-heat-templates, we mostly
use parameter_defaults, but some of the environment files still use
parameters. This can lead to confusing behavior with respect to
parameter priority when passing environment files to deploy/update
commands. Users might expect that subsequent environment files take
priority over preceding ones, but that might not be the case if the
preceding environment files use `parameters`, while the subsequent ones
use `parameter_defaults`.

This commit switches all `parameters:` uses in environments/
subdirectory to `parameter_defaults:`.

Change-Id: Ie4c03c7e7f5a5004a0384d35817135f357e9719b
Closes-Bug: #1567837

--- a/environments/docker.yaml
+++ b/environments/docker.yaml
@@ -3,7 +3,7 @@ resource_registry:
   OS::TripleO::ComputePostDeployment: ../docker/compute-post.yaml
   OS::TripleO::NodeUserData: ../docker/firstboot/install_docker_agents.yaml
 
-parameters:
+parameter_defaults:
   NovaImage: atomic-image
 
 parameter_defaults:
