--- a/environments/puppet-tenant-vlan.yaml
+++ b/environments/puppet-tenant-vlan.yaml
@@ -1,4 +1,4 @@
-parameters:
+parameter_defaults:
   NeutronNetworkType: vlan
   NeutronEnableTunnelling: false
   NeutronNetworkVLANRanges: datacentre:1:1000
