--- a/environments/updates/update-from-keystone-admin-internal-api.yaml
+++ b/environments/updates/update-from-keystone-admin-internal-api.yaml
@@ -1,7 +1,7 @@
 # This environment file provides a default value for ServiceNetMap where
 # Keystone Admin API service is running on the Internal API network
 
-parameters:
+parameter_defaults:
   ServiceNetMap:
     NeutronTenantNetwork: tenant
     CeilometerApiNetwork: internal_api
