Replace extraconfig/tasks/noop.yaml w/ Heat::None
Removes the old noop nested stack template for extraconfig
tasks and instead uses OS::Heat::None. This should avoid a few
extra resource checks on create and update.

Change-Id: I5a42fc78ece2553e86385236e214aa1e3c91cd85

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -23,10 +23,10 @@ resource_registry:
   OS::TripleO::BootstrapNode::SoftwareConfig: puppet/bootstrap-config.yaml
 
   # Tasks (for internal TripleO usage)
-  OS::TripleO::Tasks::UpdateWorkflow: extraconfig/tasks/noop.yaml
+  OS::TripleO::Tasks::UpdateWorkflow: OS::Heat::None
   OS::TripleO::Tasks::PackageUpdate: extraconfig/tasks/yum_update.yaml
-  OS::TripleO::Tasks::ControllerPrePuppet: extraconfig/tasks/noop.yaml
-  OS::TripleO::Tasks::ControllerPostPuppet: extraconfig/tasks/noop.yaml
+  OS::TripleO::Tasks::ControllerPrePuppet: OS::Heat::None
+  OS::TripleO::Tasks::ControllerPostPuppet: OS::Heat::None
 
   # This creates the "heat-admin" user for all OS images by default
   # To disable, replace with firstboot/userdata_default.yaml
