composable neutron dhcp service
Adds new puppet and puppet pacemaker specific services for
the Neutron DHCP agent.

Depends-On: Ibbfd79421f871e41f870745a593cca65e8c0e58a

Partially-implements: blueprint composable-services-within-roles

Change-Id: Ia61295943e67efe354a51a26fe4540f288ff6ede

--- a/environments/neutron-opencontrail.yaml
+++ b/environments/neutron-opencontrail.yaml
@@ -7,7 +7,7 @@ resource_registry:
 parameter_defaults:
   NeutronCorePlugin: neutron_plugin_contrail.plugins.opencontrail.contrail_plugin.NeutronPluginContrailCoreV2
   NeutronServicePlugins: neutron_plugin_contrail.plugins.opencontrail.loadbalancer.plugin.LoadBalancerPlugin
-  NeutronEnableDHCPAgent: false
+  OS::TripleO::Services::NeutronDhcpAgent: OS::Heat::None
   NeutronEnableL3Agent: false
   NeutronEnableMetadataAgent: false
   NeutronEnableOVSAgent: false
