--- a/environments/neutron-plumgrid.yaml
+++ b/environments/neutron-plumgrid.yaml
@@ -23,7 +23,7 @@ parameter_defaults:
   #PLUMgridPlumlibVersion: present
 
   # PLUMgrid doesn't require dhcp, l3, ovs and metadata agents
-  NeutronEnableDHCPAgent: false
+  OS::TripleO::Services::NeutronDhcpAgent: OS::Heat::None
   NeutronEnableL3Agent: false
   NeutronEnableMetadataAgent: false
   NeutronEnableOVSAgent: false
