--- a/environments/puppet-pacemaker.yaml
+++ b/environments/puppet-pacemaker.yaml
@@ -12,3 +12,4 @@ resource_registry:
   OS::TripleO::Services::Keystone: ../puppet/services/pacemaker/keystone.yaml
   OS::TripleO::Services::GlanceApi: ../puppet/services/pacemaker/glance-api.yaml
   OS::TripleO::Services::GlanceRegistry: ../puppet/services/pacemaker/glance-registry.yaml
+  OS::TripleO::Services::NeutronDhcpAgent: ../puppet/services/pacemaker/neutron-dhcp.yaml
