--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -126,6 +126,7 @@ resource_registry:
   OS::TripleO::Services::Keystone: puppet/services/keystone.yaml
   OS::TripleO::Services::GlanceApi: puppet/services/glance-api.yaml
   OS::TripleO::Services::GlanceRegistry: puppet/services/glance-registry.yaml
+  OS::TripleO::Services::NeutronDhcpAgent: puppet/services/neutron-dhcp.yaml
 
 parameter_defaults:
   EnablePackageInstall: false
