composable neutron l3 service
Adds new puppet and puppet pacemaker specific services for
the Neutron L3 agent.

Partially-implements: blueprint composable-services-within-roles

Change-Id: I0316043efe357a41ef3b4088a55d98dbb6d25963

--- a/environments/neutron-plumgrid.yaml
+++ b/environments/neutron-plumgrid.yaml
@@ -2,8 +2,9 @@
 # extensions, configured via puppet
 resource_registry:
   OS::TripleO::ControllerExtraConfigPre: ../puppet/extraconfig/pre_deploy/controller/neutron-plumgrid.yaml
-  # PLUMgrid doesn't require dhcp
+  # PLUMgrid doesn't require dhcp and l3 agents
   OS::TripleO::Services::NeutronDhcpAgent: OS::Heat::None
+  OS::TripleO::Services::NeutronL3Agent: OS::Heat::None
 
 parameter_defaults:
   NeutronCorePlugin: networking_plumgrid.neutron.plugins.plugin.NeutronPluginPLUMgridV2
@@ -24,7 +25,6 @@ parameter_defaults:
   #PLUMgridNeutronPluginVersion: present
   #PLUMgridPlumlibVersion: present
 
-  # PLUMgrid doesn't require l3, ovs and metadata agents
-  NeutronEnableL3Agent: false
+  # PLUMgrid doesn't require ovs and metadata agents
   NeutronEnableMetadataAgent: false
   NeutronEnableOVSAgent: false
