--- a/environments/neutron-midonet.yaml
+++ b/environments/neutron-midonet.yaml
@@ -2,13 +2,13 @@
 resource_registry:
   OS::TripleO::AllNodesExtraConfig: ../puppet/extraconfig/all_nodes/neutron-midonet-all-nodes.yaml
   OS::TripleO::Controller::Net::SoftwareConfig: ../net-config-linux-bridge.yaml # We have to avoid any ovs bridge. MidoNet is incompatible with its datapath
+  OS::TripleO::Services::NeutronL3Agent: OS::Heat::None
 
 parameter_defaults:
   EnableZookeeperOnController: true
   EnableCassandraOnController: true
   NeutronCorePlugin: 'midonet.neutron.plugin_v1.MidonetPluginV2' # Overriding default core_plugin in Neutron. Don't touch it
   NeutronEnableIsolatedMetadata: true  # MidoNet 1.9 needs this one to work. Don't change it
-  NeutronEnableL3Agent: false
   NeutronEnableOVSAgent: false
 
   # Other available options for MidoNet Services
