composable neutron metadata service
Adds new puppet and puppet pacemaker specific services for
the Neutron Metadata agent.

Partially-implements: blueprint composable-services-within-roles

Change-Id: I25f026507e78f18594599b3621613a54f246545d

--- a/environments/neutron-nuage-config.yaml
+++ b/environments/neutron-nuage-config.yaml
@@ -3,6 +3,7 @@
 resource_registry:
   OS::TripleO::ControllerExtraConfigPre: ../puppet/extraconfig/pre_deploy/controller/neutron-nuage.yaml
   OS::TripleO::Services::NeutronL3Agent: OS::Heat::None
+  OS::TripleO::Services::NeutronMetadataAgent: OS::Heat::None
 
 parameter_defaults:
   NeutronNuageOSControllerIp: '0.0.0.0'
@@ -16,7 +17,6 @@ parameter_defaults:
   UseForwardedFor: true
   NeutronCorePlugin: 'neutron.plugins.nuage.plugin.NuagePlugin'
   NeutronEnableDHCPAgent: false
-  NeutronEnableMetadataAgent: false
   NeutronEnableOVSAgent: false
   NeutronServicePlugins: []
   NovaOVSBridge: 'alubr0'
