--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -128,6 +128,7 @@ resource_registry:
   OS::TripleO::Services::GlanceRegistry: puppet/services/glance-registry.yaml
   OS::TripleO::Services::NeutronDhcpAgent: puppet/services/neutron-dhcp.yaml
   OS::TripleO::Services::NeutronL3Agent: puppet/services/neutron-l3.yaml
+  OS::TripleO::Services::NeutronMetadataAgent: puppet/services/neutron-metadata.yaml
 
 parameter_defaults:
   EnablePackageInstall: false
