--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -665,6 +665,7 @@ parameters:
       - OS::TripleO::Services::GlanceRegistry
       - OS::TripleO::Services::NeutronDhcpAgent
       - OS::TripleO::Services::NeutronL3Agent
+      - OS::TripleO::Services::NeutronMetadataAgent
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Controllers.
