Add GlanceRegistry to the endpoint map
This patch adds GlanceRegistry to the endpoint map. This
will make accessing Glance registry setings via the endpoint
map possible.

Change-Id: I9186e56cd4746a60e65dc5ac12e6595ac56505f0

--- a/network/endpoints/endpoint_data.yaml
+++ b/network/endpoints/endpoint_data.yaml
@@ -55,6 +55,11 @@ Glance:
         vip_param: GlanceApi
     port: 9292
 
+GlanceRegistry:
+    Internal:
+        vip_param: GlanceRegistry
+    port: 9191
+
 Mysql:
     '':
         vip_param: Mysql
