--- a/network/endpoints/endpoint_map.yaml
+++ b/network/endpoints/endpoint_map.yaml
@@ -12,6 +12,7 @@ parameters:
   CeilometerApiVirtualIP: {type: string, default: ''}
   CinderApiVirtualIP: {type: string, default: ''}
   GlanceApiVirtualIP: {type: string, default: ''}
+  GlanceRegistryVirtualIP: {type: string, default: ''}
   GnocchiApiVirtualIP: {type: string, default: ''}
   HeatApiVirtualIP: {type: string, default: ''}
   KeystoneAdminApiVirtualIP: {type: string, default: ''}
@@ -37,6 +38,7 @@ parameters:
       GlanceAdmin: {protocol: http, port: '9292', host: IP_ADDRESS}
       GlanceInternal: {protocol: http, port: '9292', host: IP_ADDRESS}
       GlancePublic: {protocol: http, port: '9292', host: IP_ADDRESS}
+      GlanceRegistryInternal: {protocol: http, port: '9191', host: IP_ADDRESS}
       GnocchiAdmin: {protocol: http, port: '8041', host: IP_ADDRESS}
       GnocchiInternal: {protocol: http, port: '8041', host: IP_ADDRESS}
       GnocchiPublic: {protocol: http, port: '8041', host: IP_ADDRESS}
@@ -648,6 +650,44 @@ outputs:
                   IP_ADDRESS: {get_param: PublicVirtualIP}
             - ':'
             - get_param: [EndpointMap, GlancePublic, port]
+      GlanceRegistryInternal:
+        host:
+          str_replace:
+            template:
+              get_param: [EndpointMap, GlanceRegistryInternal, host]
+            params:
+              CLOUDNAME: {get_param: CloudName}
+              IP_ADDRESS: {get_param: GlanceRegistryVirtualIP}
+        port:
+          get_param: [EndpointMap, GlanceRegistryInternal, port]
+        protocol:
+          get_param: [EndpointMap, GlanceRegistryInternal, protocol]
+        uri:
+          list_join:
+          - ''
+          - - get_param: [EndpointMap, GlanceRegistryInternal, protocol]
+            - ://
+            - str_replace:
+                template:
+                  get_param: [EndpointMap, GlanceRegistryInternal, host]
+                params:
+                  CLOUDNAME: {get_param: CloudName}
+                  IP_ADDRESS: {get_param: GlanceRegistryVirtualIP}
+            - ':'
+            - get_param: [EndpointMap, GlanceRegistryInternal, port]
+        uri_no_suffix:
+          list_join:
+          - ''
+          - - get_param: [EndpointMap, GlanceRegistryInternal, protocol]
+            - ://
+            - str_replace:
+                template:
+                  get_param: [EndpointMap, GlanceRegistryInternal, host]
+                params:
+                  CLOUDNAME: {get_param: CloudName}
+                  IP_ADDRESS: {get_param: GlanceRegistryVirtualIP}
+            - ':'
+            - get_param: [EndpointMap, GlanceRegistryInternal, port]
       GnocchiAdmin:
         host:
           str_replace:
