--- a/environments/puppet-ceph-external.yaml
+++ b/environments/puppet-ceph-external.yaml
@@ -12,6 +12,7 @@ parameter_defaults:
   # the following parameters enable Ceph backends for Cinder, Glance, Gnocchi and Nova
   NovaEnableRbdBackend: true
   CinderEnableRbdBackend: true
+  CinderBackupBackend: ceph
   GlanceBackend: rbd
   GnocchiBackend: rbd
   # If the Ceph pools which host VMs, Volumes and Images do not match these
