--- a/environments/puppet-pacemaker.yaml
+++ b/environments/puppet-pacemaker.yaml
@@ -10,6 +10,7 @@ resource_registry:
   # NOTE: For now we will need to specify overrides to all services
   # which use pacemaker. In the future (with upcoming HA light work) this
   # list will hopefully be much smaller however.
+  OS::TripleO::Services::CinderBackup: ../puppet/services/pacemaker/cinder-backup.yaml
   OS::TripleO::Services::CinderVolume: ../puppet/services/pacemaker/cinder-volume.yaml
   OS::TripleO::Services::RabbitMQ: ../puppet/services/pacemaker/rabbitmq.yaml
   OS::TripleO::Services::HAproxy: ../puppet/services/pacemaker/haproxy.yaml
