--- a/puppet/services/ceph-mon.yaml
+++ b/puppet/services/ceph-mon.yaml
@@ -38,7 +38,7 @@ parameters:
       {
         "volumes": {
           "size": 5,
-          "pg_num: 128,
+          "pg_num": 128,
           "pgp_num": 128
          }
       }
