--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -224,6 +224,7 @@ parameters:
       - OS::TripleO::Services::CephMon
       - OS::TripleO::Services::CephExternal
       - OS::TripleO::Services::CinderApi
+      - OS::TripleO::Services::CinderBackup
       - OS::TripleO::Services::CinderScheduler
       - OS::TripleO::Services::CinderVolume
       - OS::TripleO::Services::Core
