--- a/puppet/services/nova-base.yaml
+++ b/puppet/services/nova-base.yaml
@@ -29,7 +29,7 @@ parameters:
 
 outputs:
   role_data:
-    description: Role data for the Neutron base service.
+    description: Role data for the Nova base service.
     value:
       config_settings:
         nova::rabbit_password: {get_param: RabbitPassword}
@@ -37,3 +37,4 @@ outputs:
         nova::rabbit_use_ssl: {get_param: RabbitClientUseSSL}
         nova::rabbit_port: {get_param: RabbitClientPort}
         nova::debug: {get_param: Debug}
+        nova::host: '"%{::fqdn}"'
