Make HeatWorkers param affect the engine workers
With the addition of the num_engine_workers param in puppet-heat, we
can now wire the HeatWorkers parameter to also set that value, as
with the other workers.

Change-Id: I169b648737f797ccd45d12b66705d111e7b95bb7
Depends-On: I53a4333ca16df516294c733f85546c0b0a6a0b88

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -1402,6 +1402,7 @@ resources:
                 heat::api_cloudwatch::workers: {get_input: heat_workers}
                 heat::api_cfn::bind_host: {get_input: heat_api_network}
                 heat::api_cfn::workers: {get_input: heat_workers}
+                heat::engine::num_engine_workers: {get_input: heat_workers}
                 heat::database_connection: {get_input: heat_dsn}
                 heat::debug: {get_input: debug}
                 heat::db::mysql::password: {get_input: heat_password}
