composable neutron ml2 and ovs agent
Adds new puppet and puppet pacemaker specific services for
the Neutron ml2 configuration and the Ovs agent.

Partially-implements: blueprint composable-services-within-roles

Change-Id: I896e5dfe6fae49371c9fe7f47c4364eb6f621b07

--- a/environments/neutron-opencontrail.yaml
+++ b/environments/neutron-opencontrail.yaml
@@ -6,11 +6,11 @@ resource_registry:
   OS::TripleO::Services::NeutronDhcpAgent: OS::Heat::None
   OS::TripleO::Services::NeutronL3Agent: OS::Heat::None
   OS::TripleO::Services::NeutronMetadataAgent: OS::Heat::None
+  OS::TripleO::Services::NeutronOvsAgent: OS::Heat::None
 
 parameter_defaults:
   NeutronCorePlugin: neutron_plugin_contrail.plugins.opencontrail.contrail_plugin.NeutronPluginContrailCoreV2
   NeutronServicePlugins: neutron_plugin_contrail.plugins.opencontrail.loadbalancer.plugin.LoadBalancerPlugin
-  NeutronEnableOVSAgent: false
   NeutronEnableTunnelling: false
 
   # required params:
