--- a/environments/neutron-plumgrid.yaml
+++ b/environments/neutron-plumgrid.yaml
@@ -2,10 +2,11 @@
 # extensions, configured via puppet
 resource_registry:
   OS::TripleO::ControllerExtraConfigPre: ../puppet/extraconfig/pre_deploy/controller/neutron-plumgrid.yaml
-  # PLUMgrid doesn't require dhcp, l3, and metadata agents
+  # PLUMgrid doesn't require dhcp, l3, metadata, and ovs agents
   OS::TripleO::Services::NeutronDhcpAgent: OS::Heat::None
   OS::TripleO::Services::NeutronL3Agent: OS::Heat::None
   OS::TripleO::Services::NeutronMetadataAgent: OS::Heat::None
+  OS::TripleO::Services::NeutronOvsAgent: OS::Heat::None
 
 parameter_defaults:
   NeutronCorePlugin: networking_plumgrid.neutron.plugins.plugin.NeutronPluginPLUMgridV2
@@ -25,6 +26,3 @@ parameter_defaults:
   #Optional Parameters
   #PLUMgridNeutronPluginVersion: present
   #PLUMgridPlumlibVersion: present
-
-  # PLUMgrid doesn't require the ovs agent
-  NeutronEnableOVSAgent: false
