--- a/environments/neutron-nuage-config.yaml
+++ b/environments/neutron-nuage-config.yaml
@@ -4,6 +4,7 @@ resource_registry:
   OS::TripleO::ControllerExtraConfigPre: ../puppet/extraconfig/pre_deploy/controller/neutron-nuage.yaml
   OS::TripleO::Services::NeutronL3Agent: OS::Heat::None
   OS::TripleO::Services::NeutronMetadataAgent: OS::Heat::None
+  OS::TripleO::Services::NeutronOvsAgent: OS::Heat::None
 
 parameter_defaults:
   NeutronNuageOSControllerIp: '0.0.0.0'
@@ -17,7 +18,6 @@ parameter_defaults:
   UseForwardedFor: true
   NeutronCorePlugin: 'neutron.plugins.nuage.plugin.NuagePlugin'
   NeutronEnableDHCPAgent: false
-  NeutronEnableOVSAgent: false
   NeutronServicePlugins: []
   NovaOVSBridge: 'alubr0'
   controllerExtraConfig:
